# bob-1.0-vercel

./: .gitignore  DLP_IMPLEMENTATION_STRATEGY.md  DOCUMENTACAO_TECNICA.md  FILE_ANALYSIS_STRATEGY.md  GUIA_DO_USUARIO.md  LEGAL_PRIVACY_SUGGESTIONS.md  LEITURA_OBRIGATORIA_TERMOS.md  RESPOSTA_SAUDACAO.md  apphosting.yaml  devDependencies  firestore.rules  next.config.ts  package-lock.json  package.json  storage.rules  tailwind.config.ts  vercel.json
ai-service/: .dockerignore  .dotenv_antigo  .dotenv_prod  .gcloudignore  .gitignore  DEPLOY_CLOUDRUN.md  Dockerfile  README.md  deploy-dev.sh  deploy-prod.sh  main.py  pyproject.toml  test_monitoring.py
ai-service/app/: config.py
ai-service/app/api/: analysis.py  meeting.py  report.py  test.py
ai-service/app/middleware/: __init__.py  error_handler.py
ai-service/app/models/: __init__.py  requests.py  schema.py
ai-service/app/monitoring/: __init__.py  logger.py
ai-service/app/services/: digital_whitelist.py  metrics.py
ai-service/app/services/meeting_analyzer/: __init__.py  prompts.py
ai-service/app/services/meeting_analyzer/nodes/: __init__.py  chunk_text.py  extract_text.py  map_chunks.py  reduce_results.py
ai-service/app/services/meeting_analyzer/tests/: test_models.py  test_workflow.py
ai-service/app/services/report_analyzer/: __init__.py  batch_processing.py  google_sheets_service.py  prompts.py  schemas.py  signed_url.py  ultra_batch_processing.py
ai-service/app/services/report_analyzer/nodes/: __init__.py  analyze_report.py  extract_data.py  extract_pdf.py  format_message.py
ai-service/app/services/report_analyzer/tests/: extraction_results_XPerformance - 5629450 - Ref.29.08 (1).json  full_results_XPerformance - 5629450 - Ref.29.08 (1).json  test_analyze_report.py  (+19 more)
ai-service/app/services/tests/: test_digital_whitelist.py
ai-service/app/workflows/: __init__.py  meeting_workflow.py  report_workflow.py
(+121 files in other folders)
